--- a/src/pages/OrderFailure/OrderFailure.module.scss
+++ b/src/pages/OrderFailure/OrderFailure.module.scss
@@ -7,7 +7,8 @@
 
     color: #2c3e50;
     text-align: center;
-  
+    font-family: var(--main-font-family);
+
     h2 {
       font-size: 2rem;
       margin-bottom: 1rem;
@@ -51,4 +52,3 @@
       }
     }
   }
-  
