--- a/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
+++ b/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
@@ -9,6 +9,7 @@
   padding-bottom: 10px;
   font-size: 20px;
   color: #001f3d;
+  font-family: var(--main-font-family);
 }
 
 .linksSidebar {
@@ -23,6 +24,7 @@
         font-weight: 600;
         line-height: 1.4;
         cursor: pointer;
+        font-family: var(--main-font-family);
       }
     }
   }
