--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,6 +2,7 @@
   background-color: #001F3D;
   color: #fff;
   z-index: 1;
+  font-family: var(--main-font-family);
 }
 
 .footer__container {
@@ -51,6 +52,7 @@
     margin-bottom: 40px;
     font-size: 16px;
     font-weight: 400;
+    font-family: var(--main-font-family);
   }
 }
 
@@ -67,6 +69,7 @@
   text-align: center;
   color: #45525c;
   padding-bottom: 20px;
+  font-family: var(--main-font-family);
 }
 
 .location,
