--- a/src/components/ProductPriceCartShopping/ProductPriceCartShopping.module.scss
+++ b/src/components/ProductPriceCartShopping/ProductPriceCartShopping.module.scss
@@ -1,6 +1,7 @@
 .price {
   font-size: 16px;
   color: #333;
+  font-family: var(--main-font-family);
 
   .oldPrice {
     text-decoration: line-through;
