--- a/src/pages/OrderPage/OrderPage.module.scss
+++ b/src/pages/OrderPage/OrderPage.module.scss
@@ -1,4 +1,3 @@
-
 .content__container {
     background-color: #F8F8F8;
 }
@@ -15,6 +14,7 @@
     line-height: 1.2;
     padding-top: 30px;
     padding-bottom: 40px;
+    font-family: var(--main-font-family);
 }
 
 .orderForm {
@@ -29,6 +29,7 @@
     font-size: 26px;
     font-weight: 400;
     line-height: 1.3;
+    font-family: var(--main-font-family);
 }
 
 .formInfo {
@@ -101,6 +102,7 @@
     font-size: 24px;
     font-weight: 500;
     color: #535353;
+    font-family: var(--main-font-family);
 }
 
 .orderItems {
@@ -128,6 +130,7 @@
     font-size: 16px;
     background-color: #F8F8F8;
     color: #2b2929;
+    font-family: var(--main-font-family);
 }
 
 .orderItems .orderItem div {
@@ -136,6 +139,7 @@
     vertical-align: middle;
     font-size: 14px;
     color: #535353;
+    font-family: var(--main-font-family);
 }
 
 .orderItems .itemImageWrapper img {
@@ -148,6 +152,7 @@
 .orderItems .itemName {
     font-weight: 500;
     color: #2b2929;
+    font-family: var(--main-font-family);
 }
 
 .orderItems .itemQuantity,
@@ -171,6 +176,7 @@
     border-radius: 228px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-family: var(--main-font-family);
 }
 
 .submitButton:hover {
@@ -188,4 +194,5 @@
 .totalAmount{
     padding: 10px 0;
     color: #2b2929;
+    font-family: var(--main-font-family);
   }
