--- a/src/pages/SingleProduct/SingleProduct.module.scss
+++ b/src/pages/SingleProduct/SingleProduct.module.scss
@@ -14,6 +14,7 @@
     font-style: normal;
     padding-bottom: 10px;
     line-height: 1.2;
+    font-family: var(--main-font-family);
   }
 }
 
@@ -23,6 +24,7 @@
   font-style: normal;
   font-size: 12px;
   letter-spacing: 6%;
+  font-family: var(--main-font-family);
 }
 
 .productDescription {
@@ -159,6 +161,7 @@
   font-style: normal;
   line-height: 1.4;
   margin-bottom: 36px;
+  font-family: var(--main-font-family);
 }
 
 .mainText {
@@ -169,12 +172,14 @@
   line-height: 1.4;
   margin-bottom: 56px;
   min-height: 154px;
+  font-family: var(--main-font-family);
 }
 
 .inStock {
   color: #13B3BA;
   margin-left: 12px;
   margin-bottom: 12px;
+  font-family: var(--main-font-family);
 }
 
 .notStock {
@@ -184,6 +189,7 @@
   font-size: 14px;
   font-weight: 400;
   font-style: normal;
+  font-family: var(--main-font-family);
 }
 
 .oldPrice {
@@ -193,6 +199,7 @@
   font-style: normal;
   margin-left: 12px;
   margin-bottom: 6px;
+  font-family: var(--main-font-family);
 }
 
 .price {
@@ -201,6 +208,7 @@
   font-weight: 700;
   font-style: normal;
   margin-left: 12px;
+  font-family: var(--main-font-family);
 }
 
 .buy {
@@ -243,6 +251,7 @@
     font-size: 30px;
     font-weight: 700;
     font-style: normal;
+    font-family: var(--main-font-family);
   }
 }
 
