--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -57,18 +57,41 @@
 }
 
 .headerButton {
-  padding: 10px 23px;
-  border-radius: 200px;
-  background-color: #ffffff;
-  border: 0px solid #ffffff;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
   cursor: pointer;
-  font-size: 14px;
-  font-weight: 400;  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &:hover .headerIconButton {
+    background-color: rgba(0,0,0,0.05);
+  }
 }
 
-.headerButton:hover {
-  background-color: rgba(19, 179, 186, 0.2);
-  transition:  0.3s;
+/* Новий клас для кнопки-обгортки іконки (MUI IconButton) */
+.headerIconButton {
+  position: relative;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  svg {
+    font-size: 24px;
+    color: #333;
+  }
+}
+
+/* Підпис під іконкою */
+.headerIconLabel {
+  margin-top: 4px;
+  font-size: 14px;
+  color: #555;
+  user-select: none;
 }
 
 .headerIcon {
@@ -79,11 +102,6 @@
 .headerIcon:hover {
   color: #9d9d9d;
   transition: color 0.3s;
-}
-
-.headerButton p {
-  color: #9d9d9d;
-  margin-top: 4px;
 }
 
 .iconContainer p :hover {
