--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -65,10 +65,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  &:hover .headerIconButton {
-    background-color: rgba(0,0,0,0.05);
-  }
 }
 
 /* Новий клас для кнопки-обгортки іконки (MUI IconButton) */
@@ -86,12 +82,17 @@
   }
 }
 
-/* Підпис під іконкою */
 .headerIconLabel {
   margin-top: 4px;
   font-size: 14px;
-  color: #555;
+  color: #13b3ba;
   user-select: none;
+}
+
+.headerIcon p {
+  margin-top: 4px;
+  font-size: 14px;
+  color: #9d9d9d;
 }
 
 .headerIcon {
@@ -123,4 +124,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/* Іконка кошика — точні розміри 13.33 x 13.33 */
+.cartIcon {
+  width: 13.33px;
+  height: 13.33px;
+  display: block;
 }
