Виправлений вигляд кнопки Кошика

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -59,7 +59,7 @@
 .headerButton {
   background: none;
   border: none;
-  padding: 0;
+  padding: 10px 23px;
   margin: 0;
   cursor: pointer;
   display: flex;
@@ -70,17 +70,9 @@
 /* Новий клас для кнопки-обгортки іконки (MUI IconButton) */
 .headerIconButton {
   position: relative;
-  width: auto !important;
-  height: auto !important;
-  padding: 0 !important;
-  background: none !important;
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  &:hover {
-    background: none !important;
-  }
 
   svg {
     font-size: 24px;
@@ -90,6 +82,14 @@
       color: #9d9d9d;
       transition: color 0.3s;
     }
+  }
+
+  &.MuiIconButton-root {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 23px;
   }
 }
 
@@ -141,5 +141,5 @@
 .cartIcon {
   width: 13.33px;
   height: 13.33px;
-  display: block;
+  display: auto;
 }
