--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -49,6 +49,12 @@
   }
 }
 
+.linksHeaderButtons {
+  text-transform: none;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+}
+
 .iconContainer {
   display: flex;
   justify-content: flex-start;
