Тимчасовий розмір лога

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,7 +20,7 @@
 
 
 .logoHeader img {
-  width: 100%;
+  width: 80px;
 }
 
 .linksHeader {
@@ -50,7 +50,7 @@
 }
 
 .linksHeaderButtons {
-  text-transform: none;
+  text-transform: none; 
   font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
