--- a/src/components/CategoriesModal/CategoriesModal.module.scss
+++ b/src/components/CategoriesModal/CategoriesModal.module.scss
@@ -1,5 +1,3 @@
-/* src/components/CatalogModal/CatalogModal.module.scss */
-
 .overlay {
   position: fixed;
   top: 0; left: 0; width: 100%; height: 100%;
@@ -7,7 +5,7 @@
   z-index: 1000;
   display: flex;
   align-items: flex-start;
-  padding-top: 85px; /* Відступ від хедеру */
+  padding-top: 85px;
   padding-left: 40px;
   opacity: 0;
   animation: fadeIn 0.2s forwards;
@@ -36,7 +34,7 @@
   padding: 12px 25px;
   cursor: pointer;
   display: flex; justify-content: space-between; align-items: center;
-  font-size: 15px; color: #fff; transition: background-color 0.1s;
+  font-size: 15px; color: #333; transition: background-color 0.1s;
 
   &:hover, &.active {
     background-color: #136aba;
@@ -61,7 +59,7 @@
 }
 
 .subLink {
-  text-decoration: none; color: #fff; font-size: 14px; padding: 5px 0; display: block;
+  text-decoration: none; color: #444; font-size: 14px; padding: 5px 0; display: block;
   &:hover { color: #136aba; text-decoration: underline; }
 }
 
