--- a/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
+++ b/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
@@ -72,8 +72,6 @@
   left: 100%; 
   width: 800px;
   min-height: 100%;
-  background-color: #fff;
-  box-shadow: 5px 0 20px rgba(0, 0, 0, 0.1);
   border-left: 1px solid #eee;
   padding: 30px 40px;
   z-index: 100;
@@ -90,11 +88,11 @@
   padding-bottom: 15px;
 }
 
-.groupsGrid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
-}
+// .groupsGrid {
+//   display: grid;
+//   grid-template-columns: repeat(3, 1fr);
+//   gap: 30px;
+// }
 
 .groupBlock {
   margin-bottom: 20px;
