--- a/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
+++ b/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
@@ -70,12 +70,29 @@
   position: absolute;
   top: 0;
   left: 100%; 
-  width: 800px;
+  width: 700px; 
+  height: 630px;
+  overflow-y: auto;
   min-height: 100%;
   border-left: 1px solid #eee;
   padding: 30px 40px;
   z-index: 100;
   box-sizing: border-box;
+
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 3px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 3px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: #b3b3b3;
+  }
 }
 
 .flyoutTitle {
