Зміна вікна підкатегорій

--- a/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
+++ b/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
@@ -71,7 +71,7 @@
   top: 0;
   left: 100%; 
   width: 700px; 
-  height: 630px;
+  height: 250%;
   overflow-y: auto;
   min-height: 100%;
   border-left: 1px solid #eee;
