--- a/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
+++ b/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
@@ -132,7 +132,7 @@
 
 .groupBlock {
   width: 100%;
-  max-width: 100%;
+  max-width: 250px;
   overflow: hidden;
   box-sizing: border-box;
   margin-bottom: 20px;
