Тест контаків (пошта телефон локація)

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -101,4 +101,11 @@
   a:hover {
     color: #13b3ba;
   }
+
+  .contactItem {
+  display: flex;
+  align-items: center;
+  gap: 12px;           
+  }
+
 }
