--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -46,19 +46,16 @@
   }
 }
 
+.linksFooter {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
 .linksFooter a {
   text-decoration: none;
   color: #fff;
-}
-
-.linksFooter ul {
-  list-style-type: none;
-
-  li {
-    margin-bottom: 40px;
-    font-size: 16px;
-    font-weight: 400;
-  }
 }
 
 .linksFooter a:hover {
