--- a/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
+++ b/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
@@ -14,6 +14,7 @@
   padding-bottom: 20px;
   z-index: 100;
   font-family: sans-serif;
+  filter: drop-shadow(10px 4px 20px rgba(0, 0, 0, 0.15));
 }
 
 .sidebarHeader {
@@ -189,88 +190,3 @@
   }
 }
 
-// .linksSidebar {
-//   padding-top: 30px;
-// }
-
-// .linksSidebar p {
-//   font-weight: 700;
-//   font-style: 400;
-//   line-height: 1.4;
-//   padding-bottom: 10px;
-//   font-size: 20px;
-//   color: #001f3d;
-// }
-
-// .linksSidebar {
-//   ul {
-//     list-style: none;
-//     li {
-//       padding: 10px 20px;
-//       a {
-//         text-decoration: none;
-//         color: #45525c;
-//         font-size: 18px;
-//         font-weight: 600;
-//         line-height: 1.4;
-//         cursor: pointer;
-//       }
-//     }
-//   }
-// }
-
-// .menuHeader {
-//   color: #45525c;
-//   font-size: 18px;
-//   font-weight: 600;
-//   line-height: 1.4;
-//   cursor: pointer;
-//   border: 0;
-//   background: transparent;
-// }
-
-// .menuHeader:hover {
-//   color: #13b3ba;
-//   transition: color 0.3s;
-//   cursor: pointer;
-// }
-
-// .subMenu {
-//   height: 0;
-//   overflow: hidden;
-//   transition: height 0.3s;
-// }
-
-// .subMenu.open {
-//   height: auto;
-// }
-
-// .menuItem {
-//   position: relative;
-//   a:hover {
-//     color: #13b3ba;
-//     transition: color 0.3s;
-//     cursor: pointer;
-//   }
-// }
-
-// .accordionArrow {
-//   position: absolute;
-//   top: 50%;
-//   right: 20px;
-//   display: block;
-//   width: 30px;
-//   height: 17px;
-//   transform: translateY(-50%);
-//   @media (max-width: 1199.98px) {
-//     display: none;
-//   }
-// }
-
-// .accordionArrow.active {
-//   top: 25px;
-//   transform: translateY(-50%) rotate(180deg);
-//   @media (max-width: 1199.98px) {
-//     display: none;
-//   }
-// }
