--- a/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
+++ b/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
@@ -51,7 +51,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  max-height: 60vh;
+  min-height: 60vh;
   scrollbar-gutter: stable;
   overflow-y: hidden;
   @include custom-scrollbar;
@@ -108,7 +108,7 @@
   position: absolute;
   top: 0;
   left: 100%; 
-  width: 850px; 
+  width: 50vw; 
   min-height: 100%;
   max-height: 90vh;
   overflow-y: auto;
