--- a/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
+++ b/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
@@ -179,6 +179,17 @@
   }
 }
 
+.subcategoryLink {
+  font-size: 14px;
+  color: #666;
+  text-decoration: none;
+
+  &:hover {
+    color: #13b3ba;
+    text-decoration: underline;
+  }
+}
+
 .groupTitle {
   font-size: 16px;
   font-weight: 700;
