--- a/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
+++ b/src/components/CategoriesSidebar/CategoriesSidebar.module.scss
@@ -51,7 +51,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  min-height: 60vh;
+  height: 65vh;
   scrollbar-gutter: stable;
   overflow-y: hidden;
   @include custom-scrollbar;
@@ -63,7 +63,7 @@
 
 .rootItem {
   position: relative;
-  padding: 5px 20px 5px 30px;
+  padding: 20px;
   transition: background-color 0.3s;
   cursor: pointer;
 
