--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,9 +5,9 @@
 }
 
 .footer__container {
-  max-width: 1440px; /* Максимальна ширина контейнера */
-  margin: 0 auto; /* Центруємо контейнер */
-  padding: 5px 15px; /* Відступи зліва та справа */
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 5px 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,7 +16,9 @@
 .logoSocial {
   display: flex;
   flex-direction: column;
+  max-width: 124px;
 }
+
 
 .contacts {
   display: flex;
